; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_iface.c_identical_mac_addr_allowed.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_iface.c_identical_mac_addr_allowed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NL80211_IFTYPE_MONITOR = common dso_local global i32 0, align 4
@NL80211_IFTYPE_P2P_DEVICE = common dso_local global i32 0, align 4
@NL80211_IFTYPE_AP = common dso_local global i32 0, align 4
@NL80211_IFTYPE_WDS = common dso_local global i32 0, align 4
@NL80211_IFTYPE_AP_VLAN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @identical_mac_addr_allowed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @identical_mac_addr_allowed(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @NL80211_IFTYPE_MONITOR, align 4
  %7 = icmp eq i32 %5, %6
  br i1 %7, label %64, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @NL80211_IFTYPE_MONITOR, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %64, label %12

12:                                               ; preds = %8
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @NL80211_IFTYPE_P2P_DEVICE, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %64, label %16

16:                                               ; preds = %12
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @NL80211_IFTYPE_P2P_DEVICE, align 4
  %19 = icmp eq i32 %17, %18
  br i1 %19, label %64, label %20

20:                                               ; preds = %16
  %21 = load i32, i32* %3, align 4
  %22 = load i32, i32* @NL80211_IFTYPE_AP, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %28

24:                                               ; preds = %20
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* @NL80211_IFTYPE_WDS, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %64, label %28

28:                                               ; preds = %24, %20
  %29 = load i32, i32* %3, align 4
  %30 = load i32, i32* @NL80211_IFTYPE_WDS, align 4
  %31 = icmp eq i32 %29, %30
  br i1 %31, label %32, label %40

32:                                               ; preds = %28
  %33 = load i32, i32* %4, align 4
  %34 = load i32, i32* @NL80211_IFTYPE_WDS, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %64, label %36

36:                                               ; preds = %32
  %37 = load i32, i32* %4, align 4
  %38 = load i32, i32* @NL80211_IFTYPE_AP, align 4
  %39 = icmp eq i32 %37, %38
  br i1 %39, label %64, label %40

40:                                               ; preds = %36, %28
  %41 = load i32, i32* %3, align 4
  %42 = load i32, i32* @NL80211_IFTYPE_AP, align 4
  %43 = icmp eq i32 %41, %42
  br i1 %43, label %44, label %48

44:                                               ; preds = %40
  %45 = load i32, i32* %4, align 4
  %46 = load i32, i32* @NL80211_IFTYPE_AP_VLAN, align 4
  %47 = icmp eq i32 %45, %46
  br i1 %47, label %64, label %48

48:                                               ; preds = %44, %40
  %49 = load i32, i32* %3, align 4
  %50 = load i32, i32* @NL80211_IFTYPE_AP_VLAN, align 4
  %51 = icmp eq i32 %49, %50
  br i1 %51, label %52, label %62

52:                                               ; preds = %48
  %53 = load i32, i32* %4, align 4
  %54 = load i32, i32* @NL80211_IFTYPE_AP, align 4
  %55 = icmp eq i32 %53, %54
  br i1 %55, label %60, label %56

56:                                               ; preds = %52
  %57 = load i32, i32* %4, align 4
  %58 = load i32, i32* @NL80211_IFTYPE_AP_VLAN, align 4
  %59 = icmp eq i32 %57, %58
  br label %60

60:                                               ; preds = %56, %52
  %61 = phi i1 [ true, %52 ], [ %59, %56 ]
  br label %62

62:                                               ; preds = %60, %48
  %63 = phi i1 [ false, %48 ], [ %61, %60 ]
  br label %64

64:                                               ; preds = %62, %44, %36, %32, %24, %16, %12, %8, %2
  %65 = phi i1 [ true, %44 ], [ true, %36 ], [ true, %32 ], [ true, %24 ], [ true, %16 ], [ true, %12 ], [ true, %8 ], [ true, %2 ], [ %63, %62 ]
  %66 = zext i1 %65 to i32
  ret i32 %66
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
